Fixed multiple usability issues on mobile devices

--- a/src/.vuepress/scss/_md-container.scss
+++ b/src/.vuepress/scss/_md-container.scss
@@ -6,8 +6,8 @@
 .danger-container {
   display: block;
   margin: $spacer 0;
-  margin-left: -$spacer * 2;
-  margin-right: -$spacer * 2;
+  // margin-left: -$spacer * 2;
+  // margin-right: -$spacer * 2;
 }
 
 .table-container {
